--- a/src/components/app-body/app-body.scss
+++ b/src/components/app-body/app-body.scss
@@ -1,3 +1,38 @@
 .app-body {
-    
+
+}
+.pokemon-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.pokemon-single-container {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    font-family: 'Anton', sans-serif;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #ededed;
+    color: #424242;
+    margin: 10px;
+    border-radius: 3px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.pokemon-single-container:hover {
+    cursor: pointer;
+    background-color: #d6d6d6;
+}
+
+.align-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 8px;
 }
