added APIs Endpoint to the Service

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,7 +1,6 @@
+@import 'scss/bootstrap.min';
+
 .main-app {
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
-    padding-top: 15px;
+
+
 }
