--- a/src/components/app-header/app-header.scss
+++ b/src/components/app-header/app-header.scss
@@ -2,3 +2,11 @@
     width: 100%;
     margin-bottom: 3%;
 }
+.navbar-nav {
+    .nav-link {
+        &:hover,
+        &:focus {
+            cursor: poiner;
+        }
+    }
+}
