added information to modal window

--- a/src/components/app-pokemons/pokemon-modal/pokemon-modal.scss
+++ b/src/components/app-pokemons/pokemon-modal/pokemon-modal.scss
@@ -3,3 +3,11 @@
         display: block !important;
     }
 }
+.sprite {
+    display: block;
+    margin: 0 auto;
+    margin-top: 8px;
+    max-height: 145px;
+    max-width: 100%;
+    width: auto;
+}
